--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "primeng": "^17.17.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@angular/cli": "^17.3.7",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "jasmine-core": "~5.1.0",
